<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.magiclane.sdk.examples.rangefinder.MainActivity">

    <com.magiclane.sdk.core.GemSurfaceView
        android:id="@+id/gem_surface_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_range_container" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/add_range_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_background"
        android:focusable="true"
        android:clickable="true"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:paddingTopWithSystemWindowInsets='@{"8dp"}'
        app:paddingLeftWithSystemWindowInsets='@{@dimen/small_padding}'>

        <HorizontalScrollView
            android:id="@+id/current_ranges_scroll_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/small_padding"
            android:layout_marginRight="@dimen/small_padding"
            android:background="@color/color_surface_container"
            android:fadingEdgeLength="15dp"
            android:requiresFadingEdge="horizontal"
            android:scrollbars="none"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/current_ranges_buttons_container"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:orientation="horizontal" />

        </HorizontalScrollView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_button"
            style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_padding"
            android:text="@string/add"
            android:textColor="@color/text_color"
            android:textSize="@dimen/big_text_size"
            android:textStyle="bold"
            app:icon="@drawable/ic_add_24"
            app:iconGravity="textEnd"
            app:layout_constraintBottom_toBottomOf="@id/range_value_edit_text_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/range_value_edit_text_layout"
            app:layout_constraintTop_toTopOf="@id/range_value_edit_text_layout"
            app:layout_constraintVertical_bias="0.2" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/range_value_edit_text_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_padding"
            android:hint="@string/range_value"
            android:singleLine="true"
            app:helperTextEnabled="true"
            app:helperTextTextColor="@color/outline"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/options_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/current_ranges_scroll_container">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/range_value_edit_text"
                style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:digits="0123456789"
                android:ellipsize="end"
                android:imeOptions="flagNoExtractUi|actionDone"
                android:inputType="number"
                android:text=""
                android:textColor="@color/text_color"
                tools:ignore="Autofill,TextFields" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/options_button"
            style="@style/Widget.Material3.Button.TextButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="@dimen/big_padding"
            android:layout_marginTop="@dimen/big_padding"
            android:layout_marginEnd="@dimen/big_padding"
            android:layout_marginBottom="@dimen/big_padding"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:padding="0dp"
            android:text="@string/options"
            android:textAlignment="viewStart"
            android:textColor="@color/outline"
            android:textStyle="italic"
            app:icon="@drawable/ic_arrow_drop_down_24"
            app:iconGravity="end"
            app:iconTint="@color/outline"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/range_value_edit_text_layout"
            app:layout_constraintTop_toBottomOf="@id/add_button"
            app:rippleColor="@color/outline" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <ScrollView
        android:id="@+id/settings_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/color_background"
        android:fillViewport="true"
        android:padding="@dimen/small_padding"
        android:visibility="gone"
        app:paddingLeftWithSystemWindowInsets='@{@dimen/small_padding}'
        app:layout_constraintStart_toStartOf="@id/add_range_container"
        app:layout_constraintEnd_toEndOf="@id/add_range_container"
        app:layout_constraintTop_toBottomOf="@id/add_range_container">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/transport_mode_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/big_padding"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/transport_mode"
                android:textColor="@color/text_color"
                android:textSize="@dimen/big_text_size"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/transport_mode_selector"
                app:layout_constraintEnd_toStartOf="@id/transport_mode_selector"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/transport_mode_selector" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/transport_mode_selector"
                style="@style/Widget.Material3.Button.OutlinedButton.Icon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:paddingEnd="@dimen/icon_padding"
                android:paddingRight="@dimen/icon_padding"
                android:textAlignment="textStart"
                android:textColor="@color/text_color"
                android:textSize="@dimen/big_text_size"
                app:icon="@drawable/ic_settings_24"
                app:iconGravity="end"
                app:iconPadding="0dp"
                app:strokeWidth="@dimen/line"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/transport_mode_text"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/bike_type_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/big_padding"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/bike_type"
                android:textColor="@color/text_color"
                android:textSize="@dimen/big_text_size"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/bike_type_selector"
                app:layout_constraintEnd_toStartOf="@id/bike_type_selector"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/bike_type_selector" />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.Material3.Button.OutlinedButton.Icon"
                android:id="@+id/bike_type_selector"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:paddingEnd="@dimen/icon_padding"
                android:textAlignment="textStart"
                android:textColor="@color/text_color"
                android:textSize="@dimen/big_text_size"
                app:icon="@drawable/ic_settings_24"
                app:iconGravity="end"
                app:iconPadding="0dp"
                app:strokeWidth="@dimen/line"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/bike_type_text"
                app:layout_constraintTop_toBottomOf="@id/transport_mode_selector" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/range_type_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/big_padding"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/range_type"
                android:textColor="@color/text_color"
                android:textSize="@dimen/big_text_size"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/range_type_selector"
                app:layout_constraintEnd_toStartOf="@id/range_type_selector"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/range_type_selector" />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.Material3.Button.OutlinedButton.Icon"
                android:id="@+id/range_type_selector"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:paddingEnd="@dimen/icon_padding"
                android:textAlignment="textStart"
                android:textColor="@color/text_color"
                android:textSize="@dimen/big_text_size"
                app:icon="@drawable/ic_settings_24"
                app:iconGravity="end"
                app:iconPadding="0dp"
                app:strokeWidth="@dimen/line"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/range_type_text"
                app:layout_constraintTop_toBottomOf="@id/bike_type_selector" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/bike_weight_edit_text_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/big_padding"
                android:hint="@string/bike_weight"
                android:singleLine="true"
                app:helperText="@string/kilograms"
                app:helperTextEnabled="true"
                app:helperTextTextColor="@color/outline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/range_type_selector">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/bike_weight_edit_text"
                    style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:digits="0123456789"
                    android:ellipsize="end"
                    android:imeOptions="flagNoExtractUi|actionDone"
                    android:inputType="number"
                    android:text=""
                    android:textColor="@color/text_color"
                    tools:ignore="Autofill,TextFields" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/biker_weight_edit_text_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/big_padding"
                android:hint="@string/biker_weight"
                android:imeOptions="flagNoExtractUi|actionDone"
                android:inputType="number"
                android:singleLine="true"
                app:helperText="@string/kilograms"
                app:helperTextEnabled="true"
                app:helperTextTextColor="@color/outline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/bike_weight_edit_text_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/biker_weight_edit_text"
                    style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:digits="0123456789"
                    android:ellipsize="end"
                    android:imeOptions="flagNoExtractUi|actionDone"
                    android:inputType="number"
                    android:text=""
                    android:textColor="@color/text_color"
                    tools:ignore="Autofill,TextFields" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:indicatorColor="@color/indicator_color"
        app:layout_constraintBottom_toBottomOf="@id/gem_surface_view"
        app:layout_constraintEnd_toEndOf="@id/gem_surface_view"
        app:layout_constraintStart_toStartOf="@id/gem_surface_view"
        app:layout_constraintTop_toTopOf="@id/gem_surface_view" />

</androidx.constraintlayout.widget.ConstraintLayout>

</layout>
