<resources>
    <string name="app_name">RangeFinder</string>
    <string name="transport_mode">Transport mode</string>
    <string name="car">Car</string>
    <string name="lorry">Lorry</string>
    <string name="bicycle">Bicycle</string>
    <string name="pedestrian">Pedestrian</string>
    <string name="bike_type">Bike type</string>
    <string name="city">City</string>
    <string name="road">Road</string>
    <string name="cross">Cross</string>
    <string name="mountain">Mountain</string>
    <string name="range_type">Range type</string>
    <string name="range_value">Range value</string>
    <string name="fastest">Fastest</string>
    <string name="shortest">Shortest</string>
    <string name="economic">Economic</string>
    <string name="add">Add</string>
    <string name="meters">Meters</string>
    <string name="seconds">Seconds</string>
    <string name="kilograms">Kilograms</string>
    <string name="watts_per_hour">Watts per hour</string>
    <string name="bike_weight">Bike weight</string>
    <string name="biker_weight">Biker weight</string>
    <string name="error">Error</string>
    <string name="ok">OK</string>
    <string name="options">Options</string>

    //type //vehicle //value // unit
    <string name="range_item_text"><b>%s</b> <b>%s</b> %d %s</string>

    <string name="maximum_items_warning">Only a maximum of %d ranges can be generated!</string>
    <string name="same_range_detected_warning">A range with the same value already exists!</string>
    <string name="empty_range_value_warning">Range value is empty!</string>
    <string name="service_error">Routing service error: %s</string>
    <string name="token_rejected_message">The token you provided was rejected. Make sure you provide the correct value, or if you don\'t have a token, check the magiclane.com website, sign up or sign in and generate one. Then input it in the AndroidManifest.xml file.</string>
    <string name="internet_required">This app requires Internet connection. Please connect to the Internet.</string>
    <string name="sdk_initialization_failed">SDK initialization failed: %1$s</string>
</resources>
